style : make the textarea breaking line by adding line-break-anywhere and overflow hidden to hide the scrollbar

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ textarea.console-input {
   caret-color: #fff2ff68;
   width: 100%;
   resize: none;
+  overflow: hidden;
+  line-break: anywhere;
 }
 
 .input-wrapper,
