feat : make the textarea auto resize the height on user input
also disable new line inserted on 'Enter' key pressed
like the real console, if user want a new line, user has to press Shift + Enter

--- a/style.css
+++ b/style.css
@@ -23,13 +23,16 @@ body {
 }
 
 textarea.console-input {
-  all: unset;
+  background: none;
+  outline: none;
+  color: inherit;
   box-sizing: border-box;
   caret-color: #fff2ff68;
   width: 100%;
   resize: none;
   overflow: hidden;
-  line-break: anywhere;
+  margin: 0;
+  font-size: inherit;
 }
 
 .input-wrapper,
