style : change the content of ::before, fix it from shrinking because the flex display, and add style for undefined and error output

--- a/style.css
+++ b/style.css
@@ -47,25 +47,28 @@ textarea.console-input {
 .console-history > * {
   padding: 8px 20px;
   border-bottom: 1px solid #fff2ff0a;
+  display: flex;
+  gap: 6px;
 }
 
 .console-history > *::before,
 .input-wrapper::before {
   letter-spacing: -4px;
   font-weight: bold;
-  width: 20px;
-  display: inline-block;
+  width: 1em;
+  flex-shrink: 0; /* to maintain the width from shrinking */
 }
 
 .console-history .console-input::before,
 .input-wrapper::before {
-  content: ">  ";
-  color: rgb(232, 103, 236);
+  content: url('data:image/svg+xml,%3Csvg xmlns="http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg" viewBox="0 0 256 256"%3E%3Cpath fill="%23e867ec" d="m184.49 136.49l-80 80a12 12 0 0 1-17-17L159 128L87.51 56.49a12 12 0 1 1 17-17l80 80a12 12 0 0 1-.02 17Z"%2F%3E%3C%2Fsvg%3E');
+  color: #e867ec;
 }
 
 .console-history .console-output::before {
   content: "<-  ";
-  color: rgb(255, 225, 152);
+  content: url('data:image/svg+xml,%3Csvg xmlns="http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"  viewBox="0 0 24 24"%3E%3Cg fill="none" stroke="%23ffe198" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"%3E%3Cpath d="m13 19l-6-7l6-7"%2F%3E%3Cpath d="m17 19l-6-7l6-7" opacity=".5"%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+  color: #ffe198;
 }
 
 .input-wrapper {
@@ -73,5 +76,13 @@ textarea.console-input {
 }
 
 .console-output.error {
-  color: #ff7272;
+  color: #ff3b3b;
+}
+
+.console-output.error::before {
+  content: url('data:image/svg+xml,%3Csvg xmlns="http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"  viewBox="0 0 36 36"%3E%3Cpath fill="%23ff7272" d="M18 6a12 12 0 1 0 12 12A12 12 0 0 0 18 6Zm-1.49 6a1.49 1.49 0 0 1 3 0v6.89a1.49 1.49 0 1 1-3 0ZM18 25.5a1.72 1.72 0 1 1 1.72-1.72A1.72 1.72 0 0 1 18 25.5Z" class="clr-i-solid clr-i-solid-path-1"%2F%3E%3Cpath fill="none" d="M0 0h36v36H0z"%2F%3E%3C%2Fsvg%3E');
+}
+
+.console-output.undefined {
+  color: #d0d0d0ab;
 }
