--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  border: 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -27,7 +27,6 @@ body {
   background: #0d0d0d;
   color: white;
   border: 1px solid #fff2ff1b;
-  margin: 30px;
   border-radius: 2px;
   height: 500px;
   overflow-y: auto;
@@ -108,12 +107,10 @@ textarea.console-input {
 @media screen and (max-width: 580px) {
   .console-wrapper {
     font-size: 1.2em;
-    margin: 20px;
   }
 }
 @media screen and (max-width: 380px) {
   .console-wrapper {
     font-size: 1em;
-    margin: 14px;
   }
 }
